force-app/main/default/objects/Scheme__c/Scheme__c.object-meta.xml
<CustomObject>
    <label>Scheme</label>
    <pluralLabel>Schemes</pluralLabel>
    <nameField>
        <label>Scheme Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>