force-app/main/default/objects/Scheme__c/fields/Applicable_Outlet_Tag__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Outlet_Tag__c</fullName>
    <label>Applicable Outlet Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alpha</fullName>
            </value>
            <value>
                <fullName>Non-Alpha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>