force-app/main/default/objects/Scheme__c/fields/Apply_on_Single_Order_Only__c.field-meta.xml
<CustomField>
    <fullName>Apply_on_Single_Order_Only__c</fullName>
    <label>Apply on Single Order Only</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>