force-app/main/default/objects/Scheme__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending IT Review</fullName>
                </value>
                <value>
                    <fullName>Pending Director</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>