force-app/main/default/objects/Scheme__c/fields/Auto_Stop_on_Budget__c.field-meta.xml
<CustomField>
    <fullName>Auto_Stop_on_Budget__c</fullName>
    <label>Auto-Stop on Budget</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>