force-app/main/default/objects/Scheme__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Free goods</fullName>
                </value>
                <value>
                    <fullName>Percent discount</fullName>
                </value>
                <value>
                    <fullName>Value discount</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>