force-app/main/default/objects/Scheme__c/fields/Budget_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Budget_Behaviour__c</fullName>
    <label>Budget Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Auto-Block</fullName>
                </value>
                <value>
                    <fullName>Alert-Only</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>