force-app/main/default/objects/Scheme__c/fields/Claimable__c.field-meta.xml
<CustomField>
    <fullName>Claimable__c</fullName>
    <label>Claimable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>