force-app/main/default/objects/Scheme__c/fields/Eligible_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Distributor__c</fullName>
    <label>Eligible Distributor</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipName>Scheme_Eligible_Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>