force-app/main/default/objects/Scheme__c/fields/Eligible_Distributor_Type__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Distributor_Type__c</fullName>
    <label>Eligible Distributor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(distributor types)</fullName><default>false</default><label>(distributor types)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>