force-app/main/default/objects/Scheme__c/fields/Evaluation_Basis__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Basis__c</fullName>
    <label>Evaluation Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Single-Invoice</fullName>
                </value>
                <value>
                    <fullName>Cycle-Cumulative</fullName>
                </value>
                <value>
                    <fullName>Period-Cumulative</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>