force-app/main/default/objects/Scheme__c/fields/Is_Bundle_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle_Scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bundle scheme has first priority; one order can have multiple bundles if qty matches (BRD 13.3).</description>
    <label>Is Bundle Scheme</label>
    <type>Checkbox</type>
</CustomField>