force-app/main/default/objects/Scheme__c/fields/Is_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>Is_Pass_Through__c</fullName>
    <label>Is Pass-Through</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>