force-app/main/default/objects/Scheme__c/fields/Payout_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Payout_Calculation_Type__c</fullName>
    <label>Payout Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Continuous</fullName><default>false</default><label>Continuous</label></value>
            <value><fullName>Slab</fullName><default>false</default><label>Slab</label></value>
            <value><fullName>Step</fullName><default>false</default><label>Step</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>