force-app/main/default/objects/Scheme__c/fields/Scheme_Class__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Class__c</fullName>
    <label>Scheme Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>