force-app/main/default/objects/Scheme__c/fields/Scheme_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Type__c</fullName>
    <description>The trigger condition type for scheme qualification</description>
    <label>Scheme Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Product (QTY)</fullName>
            </value>
            <value>
                <fullName>Same Product (VAL)</fullName>
            </value>
            <value>
                <fullName>Assorted Product (QTY)</fullName>
            </value>
            <value>
                <fullName>Assorted Product (VAL)</fullName>
            </value>
            <value>
                <fullName>Invoice Qty Based</fullName>
            </value>
            <value>
                <fullName>Invoice Val Based</fullName>
            </value>
            <value>
                <fullName>Amount Off</fullName>
                <isActive>false</isActive>
                <label>Amount Off</label>
            </value>
            <value>
                <fullName>Buy X Get Y</fullName>
                <isActive>false</isActive>
                <label>Buy X Get Y</label>
            </value>
            <value>
                <fullName>Combo Offer</fullName>
                <isActive>false</isActive>
                <label>Combo Offer</label>
            </value>
            <value>
                <fullName>Flat Discount Percent</fullName>
                <isActive>false</isActive>
                <label>Flat Discount Percent</label>
            </value>
            <value>
                <fullName>Slab Based</fullName>
                <isActive>false</isActive>
                <label>Slab Based</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>