force-app/main/default/objects/Scheme__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Slab</fullName>
                </value>
                <value>
                    <fullName>Proportional</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Value-Based</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>