force-app/main/default/objects/Scheme__c/fields/Utilized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Utilized_Amount__c</fullName>
    <label>Utilized Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>